Aggressive memory cleanup